--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,4 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://hitesh:use-your-password@cluster0.fhkirqa.mongodb.net
+MONGODB_URI=mongo-uri
 NODE_ENV=development
+CORS_ORIGIN=*
