--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,4 +6,5 @@ ACCESS_TOKEN_SECRET=access-token-secret
 ACCESS_TOKEN_EXPIRY=days
 REFRESH_TOKEN_SECRET=refresh-token-secret
 REFRESH_TOKEN_EXPIRY=days
-
+GOOGLE_CLIENT_ID=client-id
+GOOGLE_CLIENT_SECRET=client-secret
