--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/server.js",
-    "vercel-start": "node src/server.js"
+    "dev": "nodemon -r dotenv/config src/server.js"
   },
   "keywords": [
     "javascript",
