--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config src/server.js",
-    "start": "node src/server.js"
+    "dev": "nodemon -r dotenv/config  src/server.js",
+    "start": "node src/server.js",
+    "vercel-build": "echo 'Vercel build step complete'"
   },
   "keywords": [
     "javascript",
