fix vercel bugs

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config  src/server.js",
-    "start": "node src/server.js",
-    "vercel-build": "echo 'Vercel build step complete'"
+    "start": "node -r dotenv/config src/server.js"
   },
   "keywords": [
     "javascript",
@@ -31,7 +30,6 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "serverless-http": "^4.0.0"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
